--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/geedhaipriyan/Hello-world-/blob/master/Sentiment_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/geedhaipriyan/Data-Lit-Twitter-Sentiment-Analysis-/blob/master/Sentiment_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -94,10 +94,11 @@
       "cell_type": "code",
       "source": [
         "#My Twitter API Authentication Variables\n",
-        "consumer_key = 'mGe0qQBT9KRk7gLNv2rWx069N'\n",
-        "consumer_secret = 'CRfeF7TPCJlo5Vj9d97BDo4c1ErI5ggWmMnrWYtD8eybCfEv1E'\n",
-        "access_token = '1430929286-sA4yTd5C2ST2BeQyY1rMcGlSBpTjkwU6BsT5cPo'\n",
-        "access_token_secret = 'BnrOkIQVtJXy1I9dU6tLqRWDjpp4nlfgDhUic6ovBGhbh'"
+        "#create a twitter developer and user your key.\n",
+        "consumer_key = ''\n",
+        "consumer_secret = ''\n",
+        "access_token = ''\n",
+        "access_token_secret = ''"
       ],
       "execution_count": 0,
       "outputs": []
